force-app/main/default/objects/Tracking_G_Exportacion__c/fields/Codigo_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Tracking__c</fullName>
    <label>Código Tracking</label>
    <length>10</length>
    <type>Text</type>
</CustomField>