force-app/main/default/objects/Tracking_G_Exportacion__c/fields/Detalle_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Tracking__c</fullName>
    <label>Detalle Tracking</label>
    <type>TextArea</type>
</CustomField>