force-app/main/default/objects/Tracking_G_Exportacion__c/fields/Guias_de_Exportacion__c.field-meta.xml
<CustomField>
    <fullName>Guias_de_Exportacion__c</fullName>
    <label>Guías de Exportación</label>
    <referenceTo>Guias_de_Exportacion__c</referenceTo>
    <relationshipLabel>Trackings G. Exportación</relationshipLabel>
    <relationshipName>Trackings_G_Exportaci_n</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>