force-app/main/default/objects/Tracking_G_Exportacion__c/fields/Ultimo_Estado__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Estado__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>